tests/warn/indented-expr-alignment.jo
def pair(a: String, b: String): String = a + b

def main =
  pair
    "a"
      "b"   // error
